[package]
name = "sse-sample"
version = "0.1.0"
edition = "2021"
description = "rust的SSE案例"
repository = "https://github.com/will-we/sse-sample"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures = "0.3.31"
chrono = "0.4.41"
